# healthier_food_app

./: .env.example  .gitignore  AGENTS.md  MISSION.md  NOTES.md  README.md  RESOURCES.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
learning-records/: 0001-ai-compresses-tactical-coding.md
lessons/: 0001-frame-the-bet-before-the-code.html
reference/: strategic-programming-loop.html
scripts/: seed-typesense.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: boulder-canyon-chips.avif
src/components/: OnboardingFlow.tsx  SearchScreen.tsx
src/lib/: activityChart.test.ts  activityChart.ts  alternatives.test.ts  alternatives.ts  barcode.test.ts  barcode.ts  browserBarcodeScanner.test.ts  browserBarcodeScanner.ts  openFoodFacts.test.ts  openFoodFacts.ts  qualityScore.test.ts  qualityScore.ts  sanitize.ts  scannerFormats.test.ts  scannerFormats.ts  storage.test.ts  storage.ts  swapState.test.ts  swapState.ts  typesenseSearch.test.ts  typesenseSearch.ts
